# esp32_weather_station

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
firmware/: CMakeLists.txt  LCD_Display.c  LCD_Display.h  main.c
server/: server.py
